--- a/docs/1.md
+++ b/docs/1.md
@@ -31,5 +31,5 @@ print("Hello, World!")
 ```
 以上の内容をMicroPythonデバイスに`main.py`という名前で保存
 
-## 第1回は
-ここまで次回はマイコンの使い方をより詳しく扱います．
+## 第1回はここまで
+次回はマイコンの使い方をより詳しく扱います．
