--- a/docs/4.md
+++ b/docs/4.md
@@ -2,13 +2,12 @@
 ## GASのコードサンプル
 ```javascript
 function doPost(e) {
-  let jsonString = e.postData.getDataAsString();
-  let data = JSON.parse(jsonString);
+  let data = JSON.parse(e.postData.getDataAsString());
 
-  let ss = SpreadsheetApp.openById('スプレッドシートのID');
-  let sheet = ss.getSheetByName("シート1");
-
-  sheet.appendRow([data.temperature,data.humidity]);
+  let book = SpreadsheetApp.openById('スプレッドシートのID');
+  let sheet = book.getSheetByName("シート1");
+let now = new Date();
+  sheet.appendRow([now,data.temperature,data.humidity]);
   return ContentService.createTextOutput(JSON.stringify(e));
 }
 
